@@ -214,6 +214,11 @@ BA150- elltatepairing could return wrong results [#1784]
        t_REAL. E.g. 28/10 \/ 1 == 3 but 2.8 \/ 1 == 2. Now both return 3 [#1811]
 BA158- digits(N,B) with 31/63 bit B could return wrong result
 BA159- [pthread] parallel GP could leak memory
+  160- ellinit(E, O(p^n)) was slightly incorrect for E / Q [ started by
+       approximating exact equation mod p^something instead of keeping
+       everything exact ]
+  161- ellinit(E, O(2^n)) was hardly supported, e.g.
+       ellinit("14a1",O(2^5)).tate => precision too low in p-adic AGM.
 
   Added
     1- add optional argument to sumdigits to specify the base
